packages/travelr-be/kubernetes/travelr-postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: travelr-postgres-svc # この名前でpodから名前解決できる
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: travelr-postgres
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: travelr-postgres-dpl
spec:
  replicas: 1
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: travelr-postgres
    spec: # pod spec
      volumes:
        - name: volume-travelr-postgres
          persistentVolumeClaim:
            claimName: pvc-travelr-postgres
      containers:
        - name: travelr-postgres
          image: mdillon/postgis:10-alpine
          resources:
            requests:
              cpu: 0
              memory: 0
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: '/var/lib/postgresql/data'
              name: volume-travelr-postgres
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - postgres
            initialDelaySeconds: 5
            timeoutSeconds: 1
